# Server

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/home/vadim/CLionProjects/Server/include/: Inet.hpp.func-sort-c.html  Inet.hpp.func.html  Inet.hpp.gcov.html  Subroutine.hpp.func-sort-c.html  Subroutine.hpp.func.html  Subroutine.hpp.gcov.html  TestAPI.hpp.func-sort-c.html  TestAPI.hpp.func.html  TestAPI.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage/home/vadim/CLionProjects/Server/src/: Client.cpp.func-sort-c.html  Client.cpp.func.html  Client.cpp.gcov.html  DBInterraction.cpp.func-sort-c.html  DBInterraction.cpp.func.html  DBInterraction.cpp.gcov.html  Gui.cpp.func-sort-c.html  Gui.cpp.func.html  Gui.cpp.gcov.html  Programmer.cpp.func-sort-c.html  Programmer.cpp.func.html  Programmer.cpp.gcov.html  PythonEmbedding.cpp.func-sort-c.html  PythonEmbedding.cpp.func.html  PythonEmbedding.cpp.gcov.html  Server.cpp.func-sort-c.html  Server.cpp.func.html  Server.cpp.gcov.html  Subroutine.cpp.func-sort-c.html  Subroutine.cpp.func.html  Subroutine.cpp.gcov.html  TestAPI.cpp.func-sort-c.html  TestAPI.cpp.func.html  TestAPI.cpp.gcov.html  index.html  (+8 more)
include/: Client.hpp  Gui.hpp  Inet.hpp  Programmer.hpp  PythonEmbedding.hpp  Server.hpp  Subroutine.hpp  TestAPI.hpp  ThreadPool.hpp  User.hpp
src/: Client.cpp  Gui.cpp  Programmer.cpp  Proxy.cpp  PythonEmbedding.cpp  Server.cpp  ServerRoutine.cpp  Subroutine.cpp  TestAPI.cpp  ThreadPool.cpp  User.cpp  main.cpp
test/: data.txt  script.py
